Style variables added and body style is also done

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,45 @@
+/* Designed By s1rbl4ck */
 :root {
-  /* Default Colors Will Define Here... */
+  /* Colors */
+  --black: #181e20;
+  --blue: #045c94;
+  --highBlue: #02314d;
+  --yellow: #ffbb1c;
+  --white: #f2f4f5;
+  /* Game Colors */
+  --backgroundColor: var(--black);
+  --textColor: var(--white);
+  --boardSquare: var(--white);
+  --playerTextColor: var(--yellow);
+  /* Game Fonts */
+  --gameFont: "Games", sans-serif;
+  --xoFont: cursive;
+  --authorFont: "MADE Outer Sans";
+  /* Game Sizes */
+  --titleSize: 50px;
+  --textStatusSize: 23px;
+  --textPlayerSize: 28px;
+  /* Game Margin */
+  --boardMargin: 15px;
+  /* Game Timing */
+  --time: 0.4s;
+  /* Game Radius */
+  --boardRadius: 5px;
+  /* Game Shadows */
+  --squareShadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  --hoverSquareShadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -7px 0px inset;
 }
 
 body {
-  /* BackgroundColor & Color & FontFamily & Margin */
+  height: 100vh;
+  font-family: var(--gameFont);
+  background-color: var(--backgroundColor);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
