App style has been minified

--- a/src/App.css
+++ b/src/App.css
@@ -1,139 +1,1 @@
-/* Designed By s1rbl4ck */
-.app {
-  color: var(--textColor);
-}
-/* Game Title */ /* Designed By s1rbl4ck */
-.app .game-title {
-  font-size: var(--titleSize);
-  text-align: center;
-  letter-spacing: 12px;
-  word-spacing: -20px;
-  margin: 0;
-}
-/* Game Line Seperator */ /* Designed By s1rbl4ck */
-.app .game-divider {
-  border-color: var(--blue);
-  margin: var(--boardMargin) var(--boardMargin);
-  border-radius: 5px;
-}
-/* Board */ /* Designed By s1rbl4ck */
-.app .board {
-  margin: 0 var(--boardMargin);
-}
-/* Author */ /* Designed By s1rbl4ck */
-.app .author {
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  margin: 20px 0;
-  text-align: center;
-  font-family: var(--authorFont);
-  font-size: 20px;
-}
-.app .author .author-link {
-  color: var(--blue);
-  font-weight: bold;
-  text-decoration: none;
-  transition: var(--time);
-}
-.app .author .author-link:hover {
-  color: var(--yellow);
-}
-/* Game Status Text */ /* Designed By s1rbl4ck */
-.app .board .game-status {
-  text-align: center;
-  font-size: var(--textStatusSize);
-  letter-spacing: 2px;
-}
-/* Game Player Text */ /* Designed By s1rbl4ck */
-.app .board .game-status .game-player {
-  color: var(--playerTextColor);
-  font-size: var(--textPlayerSize);
-  font-weight: bold;
-}
-/* Board Rows */ /* Designed By s1rbl4ck */
-.app .board .board-rows {
-  margin: var(--boardMargin) 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-/* Board Row */ /* Designed By s1rbl4ck */
-.app .board .board-rows .board-row {
-  display: flex;
-  flex-flow: row nowrap;
-}
-/* Square */ /* Designed By s1rbl4ck */
-.app .board .board-rows .board-row .square {
-  width: 100px;
-  height: 100px;
-  background-color: transparent;
-  border: 2px solid var(--boardSquare);
-  color: var(--textColor);
-  box-shadow: var(--squareShadow);
-  font-family: var(--xoFont);
-  font-weight: bold;
-  font-size: 50px;
-  cursor: pointer;
-  margin: 5px;
-  border-radius: var(--boardRadius);
-  transition: var(--time);
-}
-.app .board .board-rows .board-row .square:hover {
-  background-color: var(--boardSquare);
-  color: var(--backgroundColor);
-  box-shadow: var(--hoverSquareShadow);
-}
-.app .board .board-rows .board-row .square:active {
-  box-shadow: none;
-}
-/* Game Reset Button */
-.app .board .game-reset {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.app .board .game-reset .reset-button {
-  padding: 10px 15px;
-  border: none;
-  border-radius: var(--boardRadius);
-  background-color: var(--btnColor);
-  font-size: 23px;
-  font-family: var(--authorFont);
-  cursor: pointer;
-  transition: var(--time);
-}
-.app .board .game-reset .reset-button:hover {
-  background-color: var(--white);
-}
-
-@media only screen and (max-width: 467px) {
-  .app .game-title {
-    font-size: 32px;
-  }
-  .app .board .board-rows .board-row .square {
-    width: 65px;
-    height: 65px;
-  }
-}
-
-@media only screen and (max-width: 306px) {
-  .app .game-title {
-    font-size: 23px;
-  }
-  .app .game-divider {
-    margin: 15px 25px;
-  }
-  .app .board .game-status {
-    font-size: 16px;
-  }
-  .app .board .game-status .game-player {
-    font-size: 22px;
-  }
-  .app .author {
-    font-size: 16px;
-  }
-}
+.app{color:var(--textColor)}.app .game-title{font-size:var(--titleSize);text-align:center;letter-spacing:12px;word-spacing:-20px;margin:0}.app .game-divider{border-color:var(--blue);margin:var(--boardMargin) var(--boardMargin);border-radius:5px}.app .board{margin:0 var(--boardMargin)}.app .author{width:100%;position:fixed;bottom:0;left:0;margin:20px 0;text-align:center;font-family:var(--authorFont);font-size:20px}.app .author .author-link{color:var(--blue);font-weight:700;text-decoration:none;transition:var(--time)}.app .author .author-link:hover{color:var(--yellow)}.app .board .game-status{text-align:center;font-size:var(--textStatusSize);letter-spacing:2px}.app .board .game-status .game-player{color:var(--playerTextColor);font-size:var(--textPlayerSize);font-weight:700}.app .board .board-rows{margin:var(--boardMargin) 0;width:100%;display:flex;flex-direction:column;justify-content:center;align-items:center}.app .board .board-rows .board-row{display:flex;flex-flow:row nowrap}.app .board .board-rows .board-row .square{width:100px;height:100px;background-color:transparent;border:2px solid var(--boardSquare);color:var(--textColor);box-shadow:var(--squareShadow);font-family:var(--xoFont);font-weight:700;font-size:50px;cursor:pointer;margin:5px;border-radius:var(--boardRadius);transition:var(--time)}.app .board .board-rows .board-row .square:hover{background-color:var(--boardSquare);color:var(--backgroundColor);box-shadow:var(--hoverSquareShadow)}.app .board .board-rows .board-row .square:active{box-shadow:none}.app .board .game-reset{width:100%;display:flex;justify-content:center}.app .board .game-reset .reset-button{padding:10px 15px;border:none;border-radius:var(--boardRadius);background-color:var(--btnColor);font-size:23px;font-family:var(--authorFont);cursor:pointer;transition:var(--time)}.app .board .game-reset .reset-button:hover{background-color:var(--white)}@media only screen and (max-width:467px){.app .game-title{font-size:32px}.app .board .board-rows .board-row .square{width:65px;height:65px}}@media only screen and (max-width:306px){.app .game-title{font-size:23px}.app .game-divider{margin:15px 25px}.app .author,.app .board .game-status{font-size:16px}.app .board .game-status .game-player{font-size:22px}}
